<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <include layout="@layout/app_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_change_theme"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/font_black_6"/>

        <TextView
            android:id="@+id/tv_send_to_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_send_to_friend"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/font_black_6"/>

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_share"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_feedback"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/font_black_6"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_about"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ripple_item_clicked_with_mask"
        android:padding="15dp"
        android:text="@string/action_logout"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"/>

</LinearLayout>