<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ripple_item_clicked_with_mask"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_user_avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击登录"
                android:textColor="@color/font_black_2"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_user_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="心中有阳光，脚底有力量！"
                android:textColor="@color/font_black_4"
                android:textSize="13sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_avatar"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_my_bingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_my_bingo"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/font_black_6"/>

        <TextView
            android:id="@+id/tv_my_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_item_clicked_with_mask"
            android:padding="15dp"
            android:text="@string/menu_my_favorite"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ripple_item_clicked_with_mask"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/action_settings"
            android:textColor="@color/font_black_2"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_settings_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/drawable_round_red_icon"
            android:visibility="invisible"/>
    </RelativeLayout>
</LinearLayout>